{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "5b2bdc3f-99df-491c-8bfc-09a958937177",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "21b267cd-d93d-4a5d-bfd1-a9db929f84ed",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "31eccec3-e819-4bf5-b9bc-df5d21e310ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db622184-dc71-491d-8f10-319859f6f519",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dedc4e1f-0b72-4a1c-a28b-f44d6b4ac288",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}